src/test/deca/codegen/valid/homemade/test/test_complet_class_decla_float.deca
class A{
    float x = 8.1;
}


{
    A a = new A();
    
    println("x = ", a.x);
}