src/test/deca/codegen/invalid/homemade/test/test_complet_float_depassement_soustrac.deca
{
    float x  = 1.402833460e38;
    x = x - -2.3e38;
    println("x = ", (x));
}